--- a/icon.html
+++ b/icon.html
@@ -32,6 +32,9 @@
 <!--<i onclick="myFunction(this)" class="fa fa-thumbs-up"></i>-->
 <i onclick="myFunction()" class="fa-solid fa-thumbs-down"></i>
 <i onclick="myFunction()" class="fa-solid fa-thumbs-down"></i>
+<i onclick="myFunction()" class="fa-solid fa-thumbs-down"></i>
+<i onclick="myFunction()" class="fa-solid fa-thumbs-down"></i>
+<i onclick="myFunction()" class="fa-solid fa-thumbs-down"></i>
 
 <script>
     var icon = document.getElementsByClassName("fa-thumbs-down")[0].classList;
